# coderoller

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/social preview/: coderoller_social_preview.pxd
.github/workflows/: python-package.yml  python-publish.yml
src/coderoller/: flatten_repo.py  source_repo_flattener.py
tests/: test_source_repo_flattener.py
