[project]
name = "coderoller"
version = "0.1.0"
description = "A collection of tools to flatten and process code repositories"
authors = [
    {name = "B.T. Franklin", email = "brandon.franklin@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.scripts]
coderoller-flatten-repo = "coderoller.flatten_repo:main"
