[project]
name = "coderoller"
version = "0.4.2"
description = "A collection of tools to flatten and process code repositories"
authors = [
    {name = "B.T. Franklin", email = "brandon.franklin@gmail.com"},
]
dependencies = [
    "gitpython>=3.1.43",
    "pathspec>=0.12.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/btfranklin/coderoller"
Issues = "https://github.com/btfranklin/coderoller/issues"
Changelog = "https://github.com/btfranklin/coderoller/releases"
Repository = "https://github.com/btfranklin/coderoller.git"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
excludes = ["tests/**"]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.1",
    "flake8>=7.1.0",
]

[project.scripts]
coderoller-flatten-repo = "coderoller.flatten_repo:main"
